# RandChord

./: LICENSE  README.md  pyproject.toml  requirements.txt
randchord/: __main__.py  app.py  chords.json  soundsys.py
