[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "randchord"
version = "1.0.2"
description = "A terminal-based random chord progression generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pychord",
    "pysinewave",
]

[project.scripts]
randchord = "randchord.__main__:main"

[tool.setuptools.package-data]
randchord = ["chords.json"]